# VoiceAppointmentChatBot

./: .gitignore  CLAUDE.md  EVALUATION.md  README.md  config.yaml.example  pyproject.toml  task.md
.claude/: settings.local.json
domains/: hairdresser.md  hairdresser.yaml  vet.md  vet.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  api.ts  index.css  recorder.ts  types.ts
scripts/: download_piper_voices.py  prefetch_models.py
src/voiceappointmentchatbot/: __init__.py  asr.py  audio_io.py  booking.py  booking_writer.py  config.py  dialogue.py  domains.py  gpu_runtime.py  knowledge.py  llm.py  main.py  sentiment.py  tts.py  web.py
tests/: __init__.py  test_asr.py  test_booking.py  test_booking_writer.py  test_dialogue.py  test_domains.py  test_knowledge.py  test_llm.py  test_main.py
