[project]
name = "voiceappointmentchatbot"
version = "0.1.0"
description = "Bilingual (EN/HU) voice chatbot for booking veterinary appointments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Andras Janko", email = "2000.andras.janko@gmail.com"},
]
license = {file = "LICENSE"}
dependencies = [
    "faster-whisper>=1.0.3",
    "piper-tts>=1.2.0",
    "sounddevice>=0.4.7",
    "numpy>=1.26,<2.0",
    "transformers>=4.44.0",
    "torch>=2.5.0",
    "scipy>=1.13.0",
    "pyyaml>=6.0.2",
    "sentencepiece>=0.2.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9.0,<10",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
vetbot = "voiceappointmentchatbot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceappointmentchatbot"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
